from base_sampler import BaseSampler
 
class RandomSampler(BaseSampler):
  def __init__(self):
    pass